--- a/teaching/honors/index.html
+++ b/teaching/honors/index.html
@@ -66,100 +66,8 @@ Page,
 modified specifically for CS majors</a></li>
 </ul>
 <span style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
- style="font-weight: bold;"></span><span style="font-weight: bold;">For
-Students Graduating in Fall 2025</span><br>
-<ul>
-  <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
-credits</span>
-of <span style="color: rgb(255, 102, 102);">CPSC 497 Individual Study
-in
-Computer </span><span style="color: rgb(255, 102, 102);">Science<span
- style="color: rgb(0, 0, 0);"> </span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">during
-    </span></span><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">a
-prior semester</span></span><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">.</span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span></li>
-  <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
-credits</span>
-of <span style="color: rgb(255, 102, 102);">CPSC 498 Senior Honors
-Project: Computer Science<span style="color: rgb(0, 0, 0);"> for the <span
- style="font-weight: bold;">Fall 2025 </span>semester.<br>
-    </span></span></li>
-  <ul>
-    <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">At most <span
- style="font-weight: bold; text-decoration: underline;">six</span><span
- style="font-weight: bold;"> </span>credits
-of CPSC 497/498 count towards graduation; schedule accordingly.</span></span></li>
-  </ul>
-  <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">CS majors: complete the course
-substitution
-paperwork so 497/498 will
-count as a c.s. elective.</span></span></li>
-  <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);"></span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">Have
-a faculty sponsor in place and
-be&nbsp;</span></span><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">working on your project</span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">.</span></span></li>
-  <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);"><span style="font-style: italic;">Estimated
-    </span>deadlines </span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">(recommended
-by Honors College; <a
- href="http://www.uakron.edu/honors/curriculum/honors-research-project-curriculum.dot">see
-here</a>):</span></span></li>
-  <ul>
-    <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">Proposal submission for honors research
-project </span></span><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">through <a
- href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
-Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
- style="font-weight: bold;"></span>Monday March 3 2025<span
- style="font-weight: bold;"> </span><span style="font-weight: bold;"> </span>(<span
- style="font-style: italic;">already
-passed</span>) <span style="font-style: italic;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
- style="font-style: italic;"></span><span style="font-style: italic;"></span><span
- style="font-weight: bold;"> </span><span style="font-style: italic;"></span></li>
-  </ul>
-  <ul>
-    <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">Preliminary draft to research sponsor: <span
- style="font-weight: bold;">Friday November 14 2025<br>
-      </span></span></span></li>
-  </ul>
-  <ul>
-    <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">Subsequent draft to readers: <span
- style="font-weight: bold;">Friday November 21 2025<br>
-      </span></span></span></li>
-  </ul>
-  <ul>
-    <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">Final draft to sponsor and readers: <span
- style="font-weight: bold;">Tuesday November 25 2025 </span>(3 weeks
-before grades are due)</span></span></li>
-    <li>Final electronic submission of completed project report with
-all signatures <span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">to <a
- href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
-Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
- style="font-weight: bold;">Friday December 5 2025<br>
-      </span></li>
-    <ul>
-      <li><span style="font-weight: bold;">Remember to include your
-abstract or the system won't permit the upload!</span></li>
-    </ul>
-  </ul>
-</ul>
-<span style="font-weight: bold;">For
+ style="font-weight: bold;">For
 Students Graduating in Spring 2026<br>
 </span>
 <ul>
@@ -217,9 +125,9 @@ Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">
       </span></span><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);"><span
- style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
- style="font-weight: bold;">Wednesday October 1 2025</span><span
- style="font-weight: bold;"> </span>(<span style="font-style: italic;">estimated</span>)<span
+ style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span>Wednesday
+October 1 2025<span style="font-weight: bold;"> </span>(<span
+ style="font-style: italic;">already passsed</span>)<span
  style="font-weight: bold;"> </span><span style="font-style: italic;"></span></li>
     <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Preliminary draft to research sponsor: <span
@@ -308,9 +216,9 @@ Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
       <span
  style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"><span
- style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
- style="font-weight: bold;">Monday December 1 2025 </span>(<span
- style="font-style: italic;">estimated</span>)<span
+ style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span>Monday
+December 1 2025<span style="font-weight: bold;"> </span>(<span
+ style="font-style: italic;">already passed</span>)<span
  style="font-weight: bold;"> </span><span style="font-style: italic;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
@@ -347,6 +255,99 @@ abstract or the system won't permit the upload!</span></li>
     </ul>
   </ul>
 </ul>
+<span style="font-weight: bold;">For
+Students Graduating in Fall 2026</span><br>
+<ul>
+  <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
+credits</span>
+of <span style="color: rgb(255, 102, 102);">CPSC 497 Individual Study
+in
+Computer </span><span style="color: rgb(255, 102, 102);">Science<span
+ style="color: rgb(0, 0, 0);"> </span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">during
+    </span></span><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">a
+prior semester</span></span><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">.</span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span></li>
+  <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
+credits</span>
+of <span style="color: rgb(255, 102, 102);">CPSC 498 Senior Honors
+Project: Computer Science<span style="color: rgb(0, 0, 0);"> for the <span
+ style="font-weight: bold;">Fall 2026 </span>semester.<br>
+    </span></span></li>
+  <ul>
+    <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">At most <span
+ style="font-weight: bold; text-decoration: underline;">six</span><span
+ style="font-weight: bold;"> </span>credits
+of CPSC 497/498 count towards graduation; schedule accordingly.</span></span></li>
+  </ul>
+  <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">CS majors: complete the course
+substitution
+paperwork so 497/498 will
+count as a c.s. elective.</span></span></li>
+  <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);"></span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">Have
+a faculty sponsor in place and
+be&nbsp;</span></span><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">working on your project</span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">.</span></span></li>
+  <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);"><span style="font-style: italic;">Estimated
+    </span>deadlines </span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">(recommended
+by Honors College; <a
+ href="http://www.uakron.edu/honors/curriculum/honors-research-project-curriculum.dot">see
+here</a>):</span></span></li>
+  <ul>
+    <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">Proposal submission for honors research
+project </span></span><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">through <a
+ href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
+Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
+ style="font-weight: bold;"></span><span style="font-weight: bold;">Monday
+March 2 2026</span><span style="font-weight: bold;"> </span>(<span
+ style="font-style: italic;">estimated</span>) <span
+ style="font-style: italic;"></span><span style="font-weight: bold;"></span><span
+ style="font-weight: bold;"></span><span style="font-style: italic;"></span><span
+ style="font-style: italic;"></span><span style="font-weight: bold;"> </span><span
+ style="font-style: italic;"></span></li>
+  </ul>
+  <ul>
+    <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">Preliminary draft to research sponsor: <span
+ style="font-weight: bold;">Friday November 13 2026<br>
+      </span></span></span></li>
+  </ul>
+  <ul>
+    <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">Subsequent draft to readers: <span
+ style="font-weight: bold;">Friday November 20 2026<br>
+      </span></span></span></li>
+  </ul>
+  <ul>
+    <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">Final draft to sponsor and readers: <span
+ style="font-weight: bold;">Tuesday November 24 2026 </span>(3 weeks
+before grades are due)</span></span></li>
+    <li>Final electronic submission of completed project report with
+all signatures <span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">to <a
+ href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
+Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
+ style="font-weight: bold;">Friday December 4 2026<br>
+      </span></li>
+    <ul>
+      <li><span style="font-weight: bold;">Remember to include your
+abstract or the system won't permit the upload!</span></li>
+    </ul>
+  </ul>
+</ul>
 <span style="font-weight: bold;">Other
 Honors Students</span><br>
 <span style="font-weight: bold;"></span><span style="font-weight: bold;"></span>
@@ -367,12 +368,6 @@ Honors distribution courses</span> by <span style="font-weight: bold;">April
 attend the Sophomore symposium in January.</li>
   <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Proposal submission for honors research
-project, <span style="font-weight: bold;">Fall 2026 </span>grads:<span
- style="font-weight: bold;"> </span></span></span><span
- style="font-weight: bold;">Monday March 2 2026</span><span
- style="font-weight: bold;"> </span>(<span style="font-style: italic;">estimated</span>)</li>
-  <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">Proposal submission for honors research
 project, <span style="font-weight: bold;">Spring 2027 </span>grads: <span
  style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
  style="font-weight: bold;">Thursday October 1 2026 </span>(<span
@@ -383,6 +378,12 @@ project, <span style="font-weight: bold;">Summer 2027 </span>grads: <span
  style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
  style="font-weight: bold;">Tuesday December 1 2026 </span>(<span
  style="font-style: italic;">estimated</span>)</li>
+  <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">Proposal submission for honors research
+project, <span style="font-weight: bold;">Fall 2027 </span>grads:<span
+ style="font-weight: bold;"> </span></span></span><span
+ style="font-weight: bold;">Monday March 1 2027</span><span
+ style="font-weight: bold;"> </span>(<span style="font-style: italic;">estimated</span>)</li>
 </ul>
 <span style="font-weight: bold;">Important Notes<br>
 </span>
@@ -453,6 +454,3 @@ comp</a><br>
 </span><br>
 </body>
 </html>
-
-</html>
-
