--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -8,14 +8,14 @@
   <title>TENTATIVE SCHEDULE</title>
 </head>
 <body style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
- alink="#66ffff" link="#66ffff" vlink="#ff99ff">
+ alink="#000099" link="#000099" vlink="#990099">
 <center>
 <h1>TENTATIVE SCHEDULE</h1>
 </center>
 <center>
-<h1>CPSC:4/526, TR 9:15 - 10:30, BCAS 134, SPRING 2025</h1>
+<h1>3460:4/526, TR 915 - 1030 AM, BCAS 144, SPRING 2026</h1>
 </center>
-<table style="width: 1889px; height: 482px;" border="1">
+<table style="width: 100%;" border="1">
   <tbody>
     <tr bgcolor="#000000">
       <td width="20%">
@@ -35,346 +35,304 @@
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
-13 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 14<br>
-      <div style="text-align: center;">Intro, Lecture O1<br>
-      </div>
+      <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
+12<br>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
-15 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 16<br style="font-style: italic;">
-      <div style="text-align: center;">Lectures
-O1, O2<br>
-      </div>
+      <td
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">Jan
+13<br>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
-17 </td>
+      <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
+14<br>
+      </td>
+      <td
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">Jan
+15<br>
+      </td>
+      <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
+16<br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Jan 20
-      <center style="font-style: italic;">MLK Day, UA closed<br>
-Sunday: Last add day<br>
+ valign="top">Jan 19<br>
+      <center><span style="font-style: italic;">MLK Day, UA Closed</span><br
+ style="font-style: italic;">
+      <span style="font-style: italic;">Sun: Last Add Day</span><br>
       </center>
       </td>
-      <td style="background-color: rgb(255, 102, 102);"
- bgcolor="#c0c0c0" valign="top">Jan 21<br>
-      <div
- style="text-align: center; background-color: rgb(255, 102, 102);">Remote:
-Lectures
-O2, O3, O4<br>
-      </div>
-      </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Jan 20&nbsp;</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
-22<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Remote
-instruction</span><br>
-      </div>
+21<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 23<br>
-      <div style="text-align: center;">Lectures
-O4, O5 </div>
-      </td>
+ valign="top">Jan 22&nbsp;</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
-24 </td>
+23<br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
-27<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Sunday:
-Last drop day</span><br>
+26<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Sun:
+Last Drop Day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 28<br>
-      <div style="text-align: center;"> Lecture O5 </div>
+ valign="top">Jan 27&nbsp;</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
+28<br>
+      </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Jan 29<br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
-29 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 30<br>
-      <div style="text-align: center;"> Lecture P1<br>
-      </div>
+30<br>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
-31 </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
-3 </td>
+2<br>
+      </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 4<br>
-      <div style="text-align: center;"> Lecture P1 </div>
+ valign="top">Feb 3<br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
-5 </td>
+4<br>
+      </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 6<br>
-      <div style="text-align: center;">Lectures P1, P2 </div>
+ valign="top">Feb 5<br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
-7 </td>
+6<br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
-10 </td>
+9<br>
+      </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 11<br>
-      <div style="text-align: center;">Lectures P2, P3 </div>
+ valign="top">Feb 10<br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
-12 </td>
+11<br>
+      </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 13<br>
-      <div style="text-align: center;"> Lecture P3 </div>
+ valign="top">Feb 12<br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
-14 </td>
+13<br>
+      </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Feb 17 </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Feb 18<br>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
+16</td>
+      <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Feb
+17<br>
       <div style="text-align: center; background-color: rgb(0, 0, 0);"><span
- style="font-style: italic;">President's
-Day Observed, no class</span><br>
+ style="font-style: italic;">Presidents' Day observed</span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
-19 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 20<br>
-      <div style="text-align: center;"> Lecture P3 </div>
+18<br>
       </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Feb 19&nbsp;</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
-21 </td>
+20<br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
-24 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 25<br>
-      <div style="text-align: center;"> Lecture P4 </div>
+23<br>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
-26 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 27<br>
-      <div style="text-align: center;">Midterm Exam (Unit O; Lecs. P1,
-P2, P3)<br>
+ valign="top">Feb 24 </td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
+25</td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Feb 26<br>
+      <div style="text-align: center;">Midterm Exam<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
-28 </td>
+27</td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
-3<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Sunday:
-Last withdraw day</span><br>
+2<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Sun:
+Last Withdrawal Day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 4<br>
-      <div style="text-align: center;"> Lecture P4 </div>
-      <div style="text-align: center;">Due:
-Lab 1<br>
-      </div>
+ valign="top">Mar 3<br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
-5 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 6<br>
-      <div style="text-align: center;">Lectures P4, P5 </div>
+4<br>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 7<br>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Mar 5</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
+6<br>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
-10 </td>
+9<br>
+      </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 11<br>
-      <div style="text-align: center;"> Lecture P5<br>
-      </div>
+ valign="top">Mar 10<br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
-12 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 13<br>
-      <div style="text-align: center;"> Lecture P5 </div>
+11<br>
       </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Mar 12&nbsp;</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
-14 </td>
+13<br>
+      </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
-17 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 18<br>
-      <div style="text-align: center;"> Lecture D1<br>
-      </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
-19 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 20<br>
-      <div style="text-align: center;"> Lecture D1 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
-21 </td>
+      <td style="vertical-align: top;">Mar 16</td>
+      <td
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">Mar
+17</td>
+      <td style="vertical-align: top;">Mar 18</td>
+      <td
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">Mar
+19</td>
+      <td style="vertical-align: top;">Mar 20</td>
     </tr>
-    <tr bgcolor="#c0c0c0">
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
-24
+    <tr bgcolor="#ffffff">
+      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
+ valign="top">Mar 23
       <center style="font-style: italic;">Spring Break</center>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
-25
-      <center style="font-style: italic;">Spring Break</center>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
-26
-      <center style="font-style: italic;">Spring Break</center>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
-27
+      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
+ valign="top">Mar 24<br>
       <center
  style="background-color: rgb(0, 0, 0); font-style: italic;">Spring
 Break</center>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
-28
+      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
+ valign="top">Mar 25<br>
+      <center style="font-style: italic;">Spring Break</center>
+      </td>
+      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
+ valign="top">Mar 26<br>
+      <center
+ style="background-color: rgb(0, 0, 0); font-style: italic;">Spring
+Break</center>
+      </td>
+      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
+ valign="top">Mar 27<br>
       <center style="font-style: italic;">Spring Break</center>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
-31 </td>
+30<br>
+      </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 1<br>
-      <div style="text-align: center;">Lectures D2, F1 </div>
+ valign="top">Mar 31<br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
-2 </td>
+1<br>
+      </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 3<br>
-      <div style="text-align: center;">Lectures F1, F2<br
- style="font-style: italic;">
-      </div>
-      <div style="text-align: center;">Due:
-Lab 2<br>
-      </div>
+ valign="top">Apr 2<br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
-4 </td>
+3<br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
-7 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 8<br>
-      <div style="text-align: center;">Lectures F2, M1<br>
-      </div>
+6<br>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
-9 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 10<br>
-      <div style="text-align: center;"> Lecture M1 </div>
-      </td>
+ valign="top">Apr 7&nbsp;</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
-11 </td>
+8<br>
+      </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Apr 9&nbsp;</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
+10<br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
-14 </td>
+13</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 15<br>
-      <div style="text-align: center;"> Lecture M2<br>
-      </div>
-      </td>
+ valign="top">Apr 14&nbsp;</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
-16 </td>
+15</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 17<br>
-      <div style="text-align: center;"> Lecture M2<br>
-      </div>
-      </td>
+ valign="top">Apr 16&nbsp;</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
-18 </td>
+17<br>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
-21 </td>
+20</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 22<br>
-      <div style="text-align: center;">Lecture
-X1 </div>
-      </td>
+ valign="top">Apr 21&nbsp;</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
-23 </td>
+22</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 24<br>
-      <div style="text-align: center;"><span style="font-style: italic;"></span>Lecture
-X1 </div>
-      </td>
+ valign="top">Apr 23</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
-25 </td>
+24</td>
     </tr>
-    <tr valign="top">
+    <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
-28 </td>
+27<br>
+      </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 29<br>
-      <div style="text-align: center;">Lectures
-X1, X3 </div>
+ valign="top">Apr 28<br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
-30 </td>
+29<br>
+      </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">May 1<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-X3 (from slide 42), X3</span> </div>
-      <div style="text-align: center;">Due:
-Lab 3<br>
-      </div>
+ valign="top">Apr 30<br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">May
-2 </td>
+1<br>
+      </td>
     </tr>
     <tr valign="top">
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0">May
-5</td>
+4<br>
+      </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0">May
-6<br>
-      <div style="text-align: center;">Final Exam, 12:15<br>
-(Lecs. P4, P5; Units D, F, M, X)<br>
+5<br>
+      <div style="text-align: center;">Final Exam, 1215 PM<br>
       </div>
       </td>
-      <td style="background-color: rgb(0, 0, 0);">May 7
-      <center><b><br>
-      </b></center>
+      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0">May
+6<br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0">May
-8</td>
+7<br>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0">May
-9</td>
+8<br>
+      </td>
     </tr>
   </tbody>
 </table>
 <span style="font-style: italic;">
 <script language="JavaScript">document.write("<br>Tentative plans in italics. Last updated " + document.lastModified + ".");
 today = new Date();
-var dateSecond = new Date(today.getFullYear(), 4, 9);
+var dateSecond = new Date(today.getFullYear(), 4, 3);
 var timeDiff = Math.abs(dateSecond.getTime() - today.getTime());
 var diffDays = Math.ceil(timeDiff / (1000 * 3600 * 24));
-document.write("<br>Only " + diffDays + " days left until end of spring term (5/9/2025).");
+document.write("<br>Only " + diffDays + " days left until end of spring term (5/3/2025).");
 </script></span>
 </body>
 </html>
