--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -13,7 +13,7 @@
 <h1>TENTATIVE SCHEDULE</h1>
 </center>
 <center>
-<h1>3460:4/526, TR 915 - 1030 AM, BCAS 144, SPRING 2026</h1>
+<h1>3460:4/526, TR 915 - 1030 AM, CBA 144, SPRING 2026</h1>
 </center>
 <table style="width: 100%;" border="1">
   <tbody>
@@ -336,3 +336,4 @@ document.write("<br>Only " + diffDays + " days left until end of spring term (5/
 </script></span>
 </body>
 </html>
+
