--- a/teaching/cs426/textFiles/instructor.htm
+++ b/teaching/cs426/textFiles/instructor.htm
@@ -32,12 +32,11 @@ O'Neil</span><br>
  style="font-style: italic; color: rgb(252, 191, 67);">edu</span><br>
 &nbsp;&nbsp;&nbsp; Office Hours:<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span
- style="color: rgb(252, 191, 67);">In BCAS 221A: Tues 1045 - 1215,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Thurs 215 - 315.<br>
+ style="color: rgb(252, 191, 67);">In BCAS 221A: TBD.<br>
 <span
  style="color: rgb(252, 191, 67);">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; Also available by
 appointment.</span></font></b><br>
 </body>
 </html>
+
