--- a/teaching/cs426/textFiles/projects.htm
+++ b/teaching/cs426/textFiles/projects.htm
@@ -22,23 +22,14 @@ HOMEWORK
 AND PROGRAMS <br>
 <br>
 &nbsp;&nbsp; Lab 1 - A Simple Linux Shell<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../labs/lab%201%20linux%20shell.pdf" target="_top">Description</a>
-, <a href="../labs/myshell.c" target="_top">seed file</a>.<br>
-&nbsp;&nbsp; Due March 4.<br>
+&nbsp;&nbsp; Due TBD.<br>
 <br>
 &nbsp;&nbsp; Lab 2 -<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pthreads and Semaphores<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../labs/lab%202%20pthreads%20and%20sems.pdf" target="_top">Description</a>.<br>
-&nbsp;&nbsp; Due April 3.<br>
+&nbsp;&nbsp; Due TBD.<br>
 <br>
 &nbsp;&nbsp; Lab 3 - A Simple File System<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../labs/lab3/lab 3 simple file system.pdf" target="_top">Description</a>,
-	<a href="../labs/lab3/floppya.img">disk image</a>,<br>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../labs/lab3/filesys.c">seed
-	file</a>.<br>
-&nbsp;&nbsp; Due May 1.<br>
+&nbsp;&nbsp; Due TBD.<br>
 </font></b><b><br>
 </b>
 </body>
