--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -13,7 +13,7 @@
 <h1>TENTATIVE SCHEDULE</h1>
 </center>
 <center>
-<h1>3460:4/526, TR 915 - 1030 AM, CBA 144, SPRING 2026</h1>
+<h1>3460:4/526, TR 915 - 1030 AM, BCAS 144, SPRING 2026</h1>
 </center>
 <table style="width: 100%;" border="1">
   <tbody>
@@ -35,19 +35,23 @@
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
-12<br>
+      <td style="vertical-align: top; background-color: rgb(0, 0, 0);"><p>Jan
+        12<br>
+        </p>
       </td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);">Jan
-13<br>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);"><p>Jan
+        13<br>
+        <center>Intro, Lec O1</center>
+        </p>
       </td>
       <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
 14<br>
       </td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);">Jan
-15<br>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);"><p>Jan
+        15<br>
+		  <center><span style="font-style: italic;">Lec O1 (from slide 26)</span></center></p>
       </td>
       <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
 16<br>
@@ -332,9 +336,7 @@ today = new Date();
 var dateSecond = new Date(today.getFullYear(), 4, 3);
 var timeDiff = Math.abs(dateSecond.getTime() - today.getTime());
 var diffDays = Math.ceil(timeDiff / (1000 * 3600 * 24));
-document.write("<br>Only " + diffDays + " days left until end of spring term (5/3/2026).");
+document.write("<br>Only " + diffDays + " days left until end of spring term (5/3/2025).");
 </script></span>
 </body>
 </html>
-
-
