--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -35,23 +35,23 @@
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top; background-color: rgb(0, 0, 0);"><p>Jan
-        12<br>
-        </p>
+      <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
+12<br>
       </td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);"><p>Jan
-        13<br>
-        <center>Intro, Lec O1</center>
-        </p>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">Jan
+13<br>
+      <div style="text-align: center;">Intro, Lecture O1<br>
+      </div>
       </td>
       <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
 14<br>
       </td>
-      <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);"><p>Jan
-        15<br>
-		  <center><span style="font-style: italic;">Lec O1 (from slide 26)</span></center></p>
+      <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
+15<br>
+      <div style="text-align: center; background-color: rgb(0, 0, 0);"><span
+ style="font-style: italic;">Class cancelled, UA delayed open</span><br>
+      </div>
       </td>
       <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
 16<br>
@@ -66,7 +66,11 @@
       </center>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 20&nbsp;</td>
+ valign="top">Jan 20 <br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+O1 (from slide 26)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 21<br>
       </td>
