--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -50,7 +50,7 @@
       <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
 15<br>
       <div style="text-align: center; background-color: rgb(0, 0, 0);"><span
- style="font-style: italic;">Class cancelled, UA delayed open</span><br>
+ style="font-style: italic;">Class cancelled, UA closed</span><br>
       </div>
       </td>
       <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Jan
@@ -65,17 +65,21 @@
       <span style="font-style: italic;">Sun: Last Add Day</span><br>
       </center>
       </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+      <td style="background-color: rgb(204, 51, 204);" bgcolor="#c0c0c0"
  valign="top">Jan 20 <br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-O1 (from slide 26)</span><br>
-      </div>
+      <div
+ style="text-align: center; background-color: rgb(204, 51, 204);">Online:
+Lectures O1, O2 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 21<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 22&nbsp;</td>
+ valign="top">Jan 22 <br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+O2 (from slide 13)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 23<br>
       </td>
