--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -76,12 +76,13 @@ Lectures O1, O2 </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 22 <br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-O2 (from slide 13)</span><br>
-      </div>
+      <div style="text-align: center;">Lectures O2, O3 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 23<br>
+      <div style="text-align: center;"><span style="font-style: italic;">UA
+closed 2 PM for cold</span><br>
+      </div>
       </td>
     </tr>
     <tr>
@@ -92,7 +93,11 @@ Last Drop Day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 27&nbsp;</td>
+ valign="top">Jan 27 <br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+O3 (from slide 26), O4</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 28<br>
       </td>
