--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -88,14 +88,16 @@ closed 2 PM for cold</span><br>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 26<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Sun:
+      <div style="text-align: center;"><span style="font-style: italic;">Campus
+closed, work from home<br>
+Sun:
 Last Drop Day</span><br>
       </div>
       </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Jan 27 <br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-O3 (from slide 26), O4</span><br>
+      <div style="text-align: center; background-color: rgb(0, 0, 0);"><span
+ style="font-style: italic;">Class canncelled, UA late open at 11 AM</span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
@@ -103,6 +105,9 @@ O3 (from slide 26), O4</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 29<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+O3 (from slide 26), O4</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 30<br>
