--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -97,11 +97,15 @@ Last Drop Day</span><br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Jan 27 <br>
       <div style="text-align: center; background-color: rgb(0, 0, 0);"><span
- style="font-style: italic;">Class canncelled, UA late open at 11 AM</span><br>
+ style="font-style: italic;">Class cancelled, UA late open at 11 AM for
+cold</span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 28<br>
+      <div style="text-align: center;"><span style="font-style: italic;">UA
+late open at 11 AM for cold</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 29<br>
