--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -109,9 +109,7 @@ late open at 11 AM for cold</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 29<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-O3 (from slide 26), O4</span><br>
-      </div>
+      <div style="text-align: center;">Lectures O3, O4, O5 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 30<br>
@@ -123,6 +121,9 @@ O3 (from slide 26), O4</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 3<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+O5 (from slide 26)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 4<br>
