--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -121,15 +121,17 @@ late open at 11 AM for cold</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 3<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-O5 (from slide 26)</span><br>
-      </div>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lecture
+O5 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 4<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 5<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P1 (from start)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 6<br>
@@ -181,6 +183,7 @@ O5 (from slide 26)</span><br>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 26<br>
       <div style="text-align: center;">Midterm Exam<br>
+(Overview unit, Lecs P1-?)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
