--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -129,9 +129,7 @@ O5 </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 5<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P1 (from start)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture P1, Review </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 6<br>
@@ -143,6 +141,9 @@ P1 (from start)</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 10<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P1 (from slide 31)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 11<br>
