--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -13,7 +13,7 @@
 <h1>TENTATIVE SCHEDULE</h1>
 </center>
 <center>
-<h1>3460:4/526, TR 915 - 1030 AM, BCAS 144, SPRING 2026</h1>
+<h1>3460:4/526, TR 915 - 1030 AM, CBA 144, SPRING 2026</h1>
 </center>
 <table style="width: 100%;" border="1">
   <tbody>
@@ -141,15 +141,16 @@ O5 </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 10<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P1 (from slide 31)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture P1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 11<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 12<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P1 (from slide 61), P2</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 13<br>
@@ -215,6 +216,9 @@ Last Withdrawal Day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 10<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 1</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 11<br>
@@ -289,7 +293,11 @@ Break</center>
 8<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 9&nbsp;</td>
+ valign="top">Apr 9 <br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 2</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 10<br>
       </td>
@@ -334,6 +342,9 @@ Break</center>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">May
 1<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 3 (by 5 PM)</span><br>
+      </div>
       </td>
     </tr>
     <tr valign="top">
