--- a/teaching/cs426/textFiles/projects.htm
+++ b/teaching/cs426/textFiles/projects.htm
@@ -17,20 +17,24 @@ font-family:Verdana
 </head>
 <body alink="#af7703" bgcolor="#010516" link="#af7703" text="#ffffff"
  vlink="#fcbf43">
-<b><font color="#868cde" face="Verdana" size="2">CPSC 4/526<br>
+<b><font color="#868cde" face="Verdana" size="2">CPSC 4/526 SPRING 2026<br>
 HOMEWORK
 AND PROGRAMS <br>
 <br>
 &nbsp;&nbsp; Lab 1 - A Simple Linux Shell<br>
-&nbsp;&nbsp; Due TBD.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../labs/lab%201%20linux%20shell.pdf" target="_top">Description</a>
+, <a href="../labs/myshell.c" target="_top">seed file</a>.<br>
+&nbsp;&nbsp; Due March 10.<br>
 <br>
 &nbsp;&nbsp; Lab 2 -<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pthreads and Semaphores<br>
-&nbsp;&nbsp; Due TBD.<br>
+&nbsp;&nbsp; Due April 9.<br>
 <br>
 &nbsp;&nbsp; Lab 3 - A Simple File System<br>
-&nbsp;&nbsp; Due TBD.<br>
+&nbsp;&nbsp; Due May 1.<br>
 </font></b><b><br>
 </b>
 </body>
 </html>
+
